# TraceNest

./: .gitignore  Dockerfile  LICENSE  README.md  phases_tracker.txt  pyproject.toml
.github/workflows/: publish.yml
docs/: configuration.md  directory_structure.md  fastapi-integration.md  introduction.md  log-storage-and-retention.md  logging-guide.md  performance-and-safety.md  quick-start.md  ui-guide.md  versioning-and-changelog.md
examples/: fastapi_app.py
tests/: test_fastapi_middleware.py  test_formatter.py  test_logger.py  test_retention.py  test_rotation.py  test_writer.py
tracenest/: __init__.py  logger.py
tracenest/core/: config.py  formatter.py  retention.py  rotation.py  writer.py
tracenest/fastapi/: middleware.py
tracenest/ui/: router.py
tracenest/ui/templates/: app.js  index.html  styles.css
