[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "tracenest"
version = "0.1.0"
description = "Developer-first, local-first logging infrastructure for Python applications"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.9"
dynamic = []

authors = [
  { name = "VishwajitVM", email = "vishwajitmall50@gmail.com" }
]

keywords = [
  "logging",
  "observability",
  "logs",
  "fastapi",
  "developer-tools",
  "local-first",
  "infrastructure"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: System :: Logging",
  "Topic :: Software Development :: Debugging",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]

dependencies = []


[project.optional-dependencies]
fastapi = [
  "fastapi>=0.100.0"
]

dev = [
  "pytest>=7.0",
  "pytest-cov",
  "ruff",
  "black",
  "mypy",
  "uvicorn[standard]"
]

docs = [
  "mkdocs",
  "mkdocs-material"
]


[project.urls]
Homepage = "https://github.com/vishwajitvm/tracenest"
Repository = "https://github.com/vishwajitvm/tracenest"
Issues = "https://github.com/vishwajitvm/tracenest/issues"


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
include = ["tracenest*"]
exclude = ["tests*", "docs*", "examples*"]


[tool.setuptools.package-data]
tracenest = [
  "ui/templates/*.html",
  "ui/templates/*.js",
  "ui/templates/*.css"
]


[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
